# rospilot

./: .gitignore  .travis.yml  ATTRIBUTION  CHANGELOG.rst  CMakeLists.txt  NOTICE  README.md  apt-get-deps.txt  mainpage.dox  manifest.xml  package.xml  requirements.txt  setup.py
.github/workflows/: ci.yml
etc/: rospilot.rules
etc/init.d/: rospilot
firmware/imu/: COBS.h  README.md  imu.h  imu.ino
launch/: camera.launch  mavlink_only.launch  missile.launch  no_apm.launch  no_hardware.launch  rospilot.launch  rospilot_ptp.launch
msg/: Attitude.msg  BasicMode.msg  BasicStatus.msg  Battery.msg  GPSRaw.msg  IMURaw.msg  OpticalFlow.msg  PositionEstimate.msg  RCState.msg  Resolution.msg  Resolutions.msg  VisionTarget.msg  VisionTargets.msg  Waypoint.msg  Waypoints.msg
nodes/: camera.cpp  mapnik_server.py  mavlink.py  odometry.py  odroid_show.py  optical_flow.py  position_estimator.py  ptp.cpp  ros_vlc.py  usbmissile_node.py  web_ui.py
scripts/: 52-dreamcheeky.rules  first_time_setup.sh  get_mapnik_shapefiles.sh  image_view.sh  jpeg_benchmark.cpp  load_osm.sh
share/ap_config/: dnsmasq.conf.template  hostapd.conf.template  hosts.dnsmasq.template  interfaces.template  netplan.template
share/etc/: rospilot.rules  rospilot.service
share/etc/init.d/: rospilot
share/mapnik-style/: README  style.xml
share/web_assets/: app.html  bootstrap.js  camera.html  camera_controller.js  camera_resolutions_component.html  components.js  directives.js  factories.js  flight_control.html  flight_control_controller.js  graphs.html  graphs_controller.js  index.css  index.html  index.js  media_list.html  package-lock.json  package.json  recording_button.html  ros_services.js  services.js  settings.html  settings_controller.js  status_component.html  take_picture_button.html  video_devices_component.html
share/web_assets/nodejs_deps/: Makefile  package-lock.json  package.json
src/cpp/: background_image_sink.cpp  background_image_sink.h  base_camera.h  choose_wifi_device.cpp  h264_server.cpp  h264_server.h  h264_settings.h  h264_utils.cpp  h264_utils.h  image_sink.h  jpeg_decoder.cpp  mfc_encoder.cpp  people_detector.cpp  people_detector.h  ptp.cpp  ptp.h  resizer.cpp  resizer.h  software_h264_encoder.cpp  transcoder.h  transcoders.h  usb_camera.cpp  usb_camera.h  video_recorder.cpp  video_recorder.h
src/ros_vlc/: vlc_server.py
src/rospilot/: pid.py
src/rospilot/assets/: flight_control.html  index.html  index.js  settings.html  video.html
src/rospilot/msg/: _Attitude.py  _BasicMode.py  _BasicStatus.py  _RCState.py  __init__.py
src/vlc_server/: server.py
srv/: CaptureImage.srv  Glob.srv  SetBasicMode.srv  SetWaypoints.srv
static/: camera.html  flight_control.html  graphs.html  index.css  index.html  index.js
