<?xml version="1.0"?>
<package>
  <name>rospilot</name>
  <version>0.2.4</version>
  <description>rospilot</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="christopherberner@gmail.com">Christopher Berner</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/rospilot2</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>libgphoto-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospilot_deps</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>libnl-3-dev</build_depend>

  <run_depend>libnl-3</run_depend>
  <run_depend>rosbash</run_depend>
  <run_depend>dnsmasq</run_depend>
  <run_depend>hostapd</run_depend>
  <run_depend>rospilot_deps</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>rosbridge_suite</run_depend>
  <run_depend>python-cherrypy</run_depend>
  <run_depend>python-psutil</run_depend>
  <run_depend>python-colorama</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>python-mapnik</run_depend>
  <run_depend>python-tilestache</run_depend>
  <run_depend>mapnik-utils</run_depend>
  <run_depend>gdal-bin</run_depend>
  <run_depend>osm2pgsql</run_depend>
  <run_depend>postgresql-9.x-postgis</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
